apps/base/opencost/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: opencost
  labels:
    name: opencost
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
    pod-security.kubernetes.io/audit: baseline
